Fixing header spacing and adding more planning text

--- a/style.css
+++ b/style.css
@@ -87,6 +87,11 @@ html {
 
 /* Intro title section */
 
+.introheader {
+    padding: 40px;
+    box-sizing: border-box;
+}
+
 header h1 {
     color:  rgb(172, 0, 172);
     font-family: 'Montserrat', sans-serif;
@@ -98,9 +103,11 @@ header h1 {
     bottom: 0;
     left: 0;
     right: 0;
+    margin-bottom: 10px;
 }
 
 header h2 {
+    margin-bottom: 10px;
     color: white;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
@@ -143,7 +150,8 @@ h3 {
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 10px;
     position: absolute;
-    top: 165%;
+    padding:10px;
+    top: 150%;
     bottom: 0;
     left: 0;
     right: 0;
